[tool.poetry]
name = "kuis-holla-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = {extras = ["standard"], version = "^0.115.12"}
sqlalchemy = "^2.0.40"
aiosqlite = "^0.21.0"
databases = "^0.9.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.1.0"
openai = "^1.75.0"
asyncpg = "^0.29.0" 
psycopg2-binary = "^2.9"
bcrypt = "==3.2.0"
[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.0"}
poethepoet = "^0.34.0"
mypy = "^1.15.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.poe.tasks]
mypy = "mypy --config-file mypy.ini main.py"
flake8 = "flake8 --config .flake8 main.py"
black = "black main.py"
isort = "isort main.py"
lint = ["mypy", "flake8"]
format = ["black", "isort"]


